# RecipeSpeaker

./: .gitignore  presentation.ipynb  pyproject.toml
src/: asr_google_streaming_vad.ipynb  dm_fst.ipynb  my_dm_fst.py  my_ocr.py  my_slu_rule.py  my_system.ipynb  presentation.md  slu_rule.ipynb
